# 2026-photosynthesis-hackathon-template

./: .gitignore  01-potato-grebbedijk-R.ipynb  01-potato-grebbedijk.ipynb  02-bean-gart.ipynb  03-barley-nergena.ipynb  04-aardaker-nergena.ipynb  05-potato-ambit.ipynb  06-barely-ethiopia.ipynb  07-barley-germany.ipynb  08-cowpea-iita.ipynb  DATASETS.md  README.md  aardaker-nergena.ipynb  barley-nergena.ipynb  bean-gart.ipynb  cowpea-nigeria.ipynb  databricks.yml  iita-cowpea.ipynb  jii-ambit.ipynb  jii-multispeq.ipynb  potato-grebbedijk.ipynb  pyproject.toml
advanced/: cowpea-polars.ipynb  cowpea-pyspark.ipynb  ml-advanced.ipynb  ml-prediction.ipynb  protocol-timing.ipynb  raw-traces.ipynb
src/: __init__.py  _heritability.py  databricks.py  heritability.py  plot.py  protocol.py
src/data/: __init__.py  _databricks.py
src/ode/: __init__.py  _matuszynska2016.py
