[project]
name = "2026-hackathon-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "cartopy>=0.25.0",
    "dlt>=1.22.2",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mxlpy>=0.30.0",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "polars>=1.38.1",
    "pyarrow>=18,<22",
    "pyspark>=4.1.1",
    "ruff>=0.15.4",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "wadler-lindig>=0.1.7",
]


[tool.pyright]
exclude = [
    "**/.*",
    "**/__pycache__",
    "**/node_modules",
    ".venv",
    "tmp",
    "tests/sbml/assets",
]
pythonVersion = "3.14"
reportMissingModuleSource = "none"
include = [
    "src",
]
strict = []
deprecateTypingAliases = true

[tool.ruff]
indent-width = 4
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = [
    "ANN401",  # any
    "C901",    # too complex
    "COM812",  # missing trailing comma  # "D", # all of documentation
    "D105",    # magic methods
    "D203",    # blank line before docstring
    "D213",    # multi-line summary first line
    "D401",    # first line should be in imperative mood
    "E501",    # line-too-long
    "ERA001",  # commented-out code
    "FIX001",  # line contains FIXME
    "ISC001",  # single line implicit string concat
    "N806",    # non-lowercase variable
    "N818",    # Exception should end in "Error"
    "PGH003",  # specific rule type ignore
    "S110",    # try-except-pass
    "S301",    # pickle usage
    "TC004",   # move import out of type-checking block
    "TD001",   # invalid todo tag
    "TD002",   # missing todo author
    "TD003",   # missing todo link
    "TD004",   # missing todo version
    "TD005",   # missing todo date
    "TRY003",  # raise vanilla args
    "PLR0912", # too many branches
    "PLR0911", # too many statements
    "PLR0913", # max num of arguments
    "PLR0915", # too many lines
    "PD010",   # pivot table
    "PT011",   # pytest.raises is too broad
    "RUF022",  # unsorted all
    "TC006",   # cast("type")
]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "T201", # print statements
    "D",    # all of documentation
]
